[refactor] 피드백 사항 구현 - domainpage record 전환 - 모든 도메인VO 에서 도메인 전용 예외 사용